# tonyfettes-raylib

./: .gitattributes  .gitignore  .lsan-suppressions  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  WORKFLOW.md  arrays.mbt  arrays_test.mbt  audio.mbt  audio_stream.mbt  audio_test.mbt  automation.mbt  automation_wbtest.mbt  buffer_data.mbt  build.js  camera.mbt  camera_and_core_test.mbt  camera_test.mbt  clean.sh  collision_3d_and_types_test.mbt  collision_test.mbt  color.mbt  color_test.mbt  constants.mbt  core.mbt  drawing.mbt  filesystem.mbt  filesystem_string_test.mbt  filesystem_test.mbt  font.mbt  image.mbt  image_drawing.mbt  image_processing.mbt  image_test.mbt  input.mbt  material.mbt  material_test.mbt  math_helpers.mbt  (+54 more)
.github/workflows/: publish-community.yml  publish-web-games-pages.yml  publish.yml  test.yml
docs/: AI_CHANGE_REVIEW_2026-02-24.md  API_COVERAGE.md  FROM_SCRATCH_GAME_SLATE.md  MEDIUM_GAMES_BATCH_15.md  WEB_BROWSER_EMCC_INVESTIGATION.md  WEB_GITHUB_PAGES_AUTOMATION.md  WEB_MOBILE_TOUCH_CONTROLS.md
docs/plans/: 2026-04-24-upgrade-raylib-6.md
docs/software_factory_blog/: blog-zh.md  blog.md
examples/: moon.mod  moon.mod.json
examples/core_2d_camera/: main.mbt
examples/core_3d_camera_mode/: main.mbt
examples/core_input_mouse_wheel/: main.mbt
examples/demo/: moon.pkg  pkg.generated.mbti
examples/raygui_demo/: pkg.generated.mbti
examples/raylib_2048/: README.mbt.md  constants.mbt  input.mbt  logic.mbt  main.mbt  moon.pkg  pkg.generated.mbti  render.mbt  types.mbt
examples/raylib_abyss_signal_runner_2026/: README.mbt.md  input.mbt  logic.mbt  main.mbt  moon.mod.json  moon.pkg  pkg.generated.mbti  render.mbt
examples/raylib_aftershock_rescue_convoy_2026/: README.mbt.md  main.mbt  pkg.generated.mbti
examples/raylib_age_of_empires_1997_lite/: constants.mbt  main.mbt  render_ui.mbt  spin_system.mbt  stage_profile.mbt
examples/raylib_age_of_empires_2_1999_lite/: main.mbt  render_ui.mbt  spin_system.mbt
examples/raylib_air_traffic_control_2026/: README.mbt.md  main.mbt  pkg.generated.mbti
examples/raylib_alien_storm_1990_lite/: constants.mbt  main.mbt  render_ui.mbt  spin_system.mbt  stage_profile.mbt
examples/raylib_alien_vs_predator_1994_lite/: constants.mbt  main.mbt  render_ui.mbt  render_world.mbt  spin_system.mbt
examples/raylib_ancient_temple_trap_run_2026/: README.mbt.md  input.mbt  logic.mbt  main.mbt  moon.pkg  pkg.generated.mbti  render.mbt
examples/raylib_apex_legends_2019_lite/: constants.mbt  main.mbt  render_ui.mbt  spin_system.mbt  stage_profile.mbt
examples/raylib_arcade_factory_defense_2026/: README.mbt.md  main.mbt  pkg.generated.mbti
examples/raylib_arcade_hacker_infiltration_2026/: README.mbt.md  main.mbt  pkg.generated.mbti
examples/raylib_archery_tournament_2026/: README.mbt.md  main.mbt  pkg.generated.mbti
examples/raylib_arctic_outpost_survival_2026/: README.mbt.md  input.mbt  logic.mbt  main.mbt  moon.pkg  pkg.generated.mbti  render.mbt
examples/raylib_arctic_signal_relay_2026/: README.mbt.md  input.mbt  logic.mbt  main.mbt  moon.pkg  pkg.generated.mbti  render.mbt
examples/raylib_arknights_endfield_2025_lite/: constants.mbt  main.mbt  (+1 more)
main/: main.mbt  moon.pkg  moon.pkg.json
raygui/: color.mbt  color_test.mbt  controls_basic.mbt  controls_color.mbt  controls_container.mbt  controls_dialog.mbt  controls_list.mbt  controls_slider.mbt  controls_test.mbt  controls_text.mbt  draw.mbt  icons.mbt  lib.mbt  moon.pkg  pkg.generated.mbti  show.mbt  state.mbt  state_test.mbt  state_wbtest.mbt  style.mbt  text.mbt  text_test.mbt
rl/: buffer.mbt  buffer_data.mbt  moon.pkg  pkg.generated.mbti  rl.mbt
scripts/: run-asan.py
tools/: build_all_web_games.sh  build_web_abyss_signal_runner_2026.sh  build_web_aftershock_rescue_convoy_2026.sh  build_web_age_of_empires_1997_lite.sh  build_web_age_of_empires_2_1999_lite.sh  build_web_air_traffic_control_2026.sh  build_web_alien_storm_1990_lite.sh  build_web_alien_vs_predator_1994_lite.sh  build_web_ancient_temple_trap_run_2026.sh  build_web_apex_legends_2019_lite.sh  build_web_arcade_factory_defense_2026.sh  build_web_arcade_hacker_infiltration_2026.sh  build_web_archery_tournament_2026.sh  build_web_arctic_outpost_survival_2026.sh  build_web_arctic_signal_relay_2026.sh  build_web_arknights_endfield_2025_lite.sh  build_web_arknights_td_2020_lite.sh  build_web_armored_warriors_1994_lite.sh  build_web_asktao_2006_lite.sh  build_web_asteroid_salvage_2026.sh  build_web_audition_online_2004_lite.sh  build_web_auto_chess_micro_2026.sh  build_web_autochess_2019_lite.sh  build_web_avengers_1991_lite.sh  build_web_azur_lane_2017_lite.sh  build_web_baldurs_gate_3_2023_lite.sh  build_web_bamboo_forest_sentinel_2026.sh  build_web_battle_circuit_1997_lite.sh  build_web_battle_kart_arena_2026.sh  build_web_binding_of_isaac_2011_lite.sh  build_web_black_myth_wukong_2024_lite.sh  build_web_bloodborne_2015_lite.sh  build_web_bloody_roar_1997_lite.sh  build_web_bomber_grid_2026.sh  build_web_bowling_alley_2026.sh  build_web_breakout_lab_2026.sh  build_web_broforce_2015_lite.sh  build_web_cadillacs_dinosaurs_1993_lite.sh  build_web_call_of_duty_4_2007_lite.sh  build_web_candy_crush_2026.sh  (+290 more)
(+3236 files in other folders)
